mdapipkg/unpackaged/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Finished__c</fullName>
        <label>Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <referenceTo>Job_Type__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notifiable_Errors__c</fullName>
        <label>Notifiable Errors</label>
        <summarizedField>Batch__c.Notifiable_Errors__c</summarizedField>
        <summaryForeignKey>Batch__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Scheduled_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Hour__c</fullName>
        <label>Scheduled Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Minute__c</fullName>
        <label>Scheduled Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Repeat_Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Job_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Repeat Scheduled</value>
        </filters>
        <label>Repeat Scheduled</label>
    </listViews>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Job Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>